fix empty span not showing on data row click

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1717,7 +1717,7 @@ select:hover {
   width: 100%;
 }
 
-.error-suggestion-display > div {
+.error-suggestion-display div {
   font-size: 1.4rem !important;
 }
 
@@ -1728,6 +1728,33 @@ select:hover {
 span.highlight {
   z-index: 10 !important;
   line-height: 0;
+}
+
+.error-suggestion-display-mt-reference-container {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  width: 100%;
+}
+
+.machine-translation-container {
+  width: 50%;
+}
+
+.error-suggestion-display-container {
+  width: 100%;
+}
+
+.reference-text-container {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+  width: 50%;
+  padding-left: 5%;
+  margin-left: 0%;
+  border-left: 1px solid #333333;
+  /* background-color: red; */
 }
 
 .error-suggestion-display span.highlight {
